--- a/public/chat.html
+++ b/public/chat.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>ChatCord App</title>
+    <title>Crafted Diaries Chat</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> ChatCord</h1>
+        <h1><i class="fas fa-feather-alt"></i> Crafted Diaries Chat</h1>
         <a href="index.html" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
